fix head font size on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header{
 }
 header h1{
     font-family: 'Courier New', Courier, monospace;
-    font-size: 4rem;
+    font-size: clamp(2rem, 5vw, 4rem);
     text-align: center;
     margin-bottom: 100px;
 }
@@ -251,6 +251,11 @@ footer p a{
         font-size: 1.2rem;
     }
     header h1{
-        font-size: 2.4rem;
+        font-size: 2.6rem;
+    }
+}
+@media (max-width: 360px){
+    header h1{
+        font-size: 2.3rem;
     }
 }
